--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.country-container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+/* Style for input bar */
+.input_container{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 30px 0;
 }
-
-.App-link {
-  color: #61dafb;
+.input-wrapper{
+position:relative;
+line-height: 14px;
+margin:0 10px;
+display:inline-block;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{ 
+font-size:13px;
+color:#555;
+outline:none;
+border:1px solid #bbb;
+padding:10px 20px;
+border-radius:20px;
+position:relative;
+width:500px;
 }
